margin changed on padding at places where its correct

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="navigation">
+      <nav class="navigation">
         <a href="" class="site-logo">Golden</a>
         <ul class="navigation-list">
           <li class="navigation-list-item">
@@ -27,7 +27,7 @@
             <a href="" class="navigation-list-link">contact</a>
           </li>
         </ul>
-      </div>
+      </nav>
     </header>
     <section class="services">
       <div class="container">
